data/derived/comb/progs/unify/prog1152.ml.out
Characters 79-81:
  List.fold_left f base xs;;
                        ^^
Error: This expression has type int but an expression was expected of type
         'a list
